Games page - better subtitle

--- a/public/games.html
+++ b/public/games.html
@@ -41,6 +41,6 @@
   <body>
     <!-- lazy iframe but who cares -->
     <iframe style="width: 100%; height: 100%; margin: 0; padding: 0; display: block;"
-      src="https://mp3martin.github.io/tiers-fork/?url=https%3A%2F%2Fcdn.jsdelivr.net%2Fgh%2Fmp3martin%2Fpublic-assets%40master%2Ftierlists%2Fmy_favourite_games%2Ftierlist.json&lock=1&note=Horizontal%20order%20can%28not%29%20also%20matter"></iframe>
+      src="https://mp3martin.github.io/tiers-fork/?url=https%3A%2F%2Fcdn.jsdelivr.net%2Fgh%2Fmp3martin%2Fpublic-assets%40master%2Ftierlists%2Fmy_favourite_games%2Ftierlist.json&lock=1&note=Horizontal%20order%20may%20%28or%20may%20not%29%20matter"></iframe>
   </body>
 </html>
